Update translations & varius functions

--- a/web/translation.yml
+++ b/web/translation.yml
@@ -19,6 +19,17 @@ en:
         id15: "Date of creation"
         id16: "Collection"
         id17: "Genre"
+        gameid1: "You are level 0 !"
+        gameid2: "Fill an information to start."
+        gameid3: "You are level {{ user.level}}! More than {{ user.xp.up - user.xp.current }} points before level {{ user.level+1 }}."
+        gameid4: "Level {{ user.level+1 }}"
+        gameid5: "Youhou ! You are at the top !"
+        gameid6: "The second rank, the most ingrate... Still a little effort to take the lead!"
+        gameid7: "{{ user.rank.computed }} - Impressive, you are in the top 5, you get closer to the top!"
+        gameid8: "{{ user.rank.computed }} - Well, you're in the top 50, keep going like that!"
+        gameid9: "Top contributors"
+        gameid10: "Points"
+        helpid1: "Help us!"
 
 fr:
     index:
@@ -41,3 +52,14 @@ fr:
         id15: "Date de création"
         id16: "Collection"
         id17: "Genre"
+        gameid1: "Tu es niveau 0 !"
+        gameid2: "Saisis une information pour commencer à monter dans le classement"
+        gameid3: "Tu es niveau {{ user.level }}! Plus que {{ user.xp.up - user.xp.current }} points avant le niveau {{ user.level+1 }}."
+        gameid4: "Niveau {{ user.level+1 }}"
+        gameid5: "Youhou ! Tu es en tête du classement !"
+        gameid6: "La 2ème place, la plus ingrate... Encore un petit effort pour prendre la tête !"
+        gameid7: "{{ user.rank.computed }} - Impressionnant, tu es dans le top 5, tu te rapproches du sommet !"
+        gameid8: "{{ user.rank.computed }} - Eh bien, tu es dans le top 50, continue comme ça !"
+        gameid9: "Meilleurs contributeurs"
+        gameid10: "Points"
+        helpid1: "Aidez-nous !"
