--- a/web/translation.yml
+++ b/web/translation.yml
@@ -19,17 +19,25 @@ en:
         id15: "Date of creation"
         id16: "Collection"
         id17: "Genre"
+        id18: "Reach Wikidata page"
+        id19: "This item doesn't have any data. Feel free to fill it by clicking the Wikidata icon."
+        id20: "This item doesn't have any title. Feel free to fill it by clicking the Wikidata icon."
+        id21: "Reach Commons page"
         gameid1: "You are level 0 !"
         gameid2: "Fill an information to start."
-        gameid3: "You are level {{ user.level}}! More than {{ user.xp.up - user.xp.current }} points before level {{ user.level+1 }}."
-        gameid4: "Level {{ user.level+1 }}"
+        gameid3: "You are level"
+        gameid4: "Level"
         gameid5: "Youhou ! You are at the top !"
         gameid6: "The second rank, the most ingrate... Still a little effort to take the lead!"
-        gameid7: "{{ user.rank.computed }} - Impressive, you are in the top 5, you get closer to the top!"
-        gameid8: "{{ user.rank.computed }} - Well, you're in the top 50, keep going like that!"
+        gameid7: "Impressive, you are in the top 5, you get closer to the top!"
+        gameid8: "Well, you're in the top 50, keep going like that!"
         gameid9: "Top contributors"
         gameid10: "Points"
+        gameid11: "! More than "
+        gameid12: "points before level"
         helpid1: "Help us!"
+        headerid1: "images already described!"
+        headerid2: "results for"
 
 fr:
     index:
@@ -52,14 +60,22 @@ fr:
         id15: "Date de création"
         id16: "Collection"
         id17: "Genre"
+        id18: "Voir l'élément Wikidata"
+        id19: "Aucune donnée n'existe sur cet élément, n'hésitez pas à compléter la fiche Wikidata en cliquant sur l'icône."
+        id20: "Cet élément ne possède pas de titre, n'hésitez pas à compléter la fiche Wikidata en cliquant sur l'icône."
+        id21: "Voir l'élément Commons"
         gameid1: "Tu es niveau 0 !"
         gameid2: "Saisis une information pour commencer à monter dans le classement"
-        gameid3: "Tu es niveau {{ user.level }}! Plus que {{ user.xp.up - user.xp.current }} points avant le niveau {{ user.level+1 }}."
-        gameid4: "Niveau {{ user.level+1 }}"
+        gameid3: "Tu es niveau"
+        gameid4: "Niveau"
         gameid5: "Youhou ! Tu es en tête du classement !"
         gameid6: "La 2ème place, la plus ingrate... Encore un petit effort pour prendre la tête !"
-        gameid7: "{{ user.rank.computed }} - Impressionnant, tu es dans le top 5, tu te rapproches du sommet !"
-        gameid8: "{{ user.rank.computed }} - Eh bien, tu es dans le top 50, continue comme ça !"
+        gameid7: "Impressionnant, tu es dans le top 5, tu te rapproches du sommet !"
+        gameid8: "Eh bien, tu es dans le top 50, continue comme ça !"
         gameid9: "Meilleurs contributeurs"
         gameid10: "Points"
+        gameid11: "! Plus que "
+        gameid12: "points avant le niveau"
         helpid1: "Aidez-nous !"
+        headerid1: "oeuvres déjà décrites !"
+        headerid2: "résultats pour"
